<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="struct_ADS_Auhofcenter" Id="{0178659a-259a-4273-858e-0924f3e19e77}">
    <Declaration><![CDATA[TYPE struct_ADS_Auhofcenter :
STRUCT
	int_liveCount		: INT;	
	rHeartbeat			: REAL;
	rErrorWarning		: REAL;
	rSPOptReady			: REAL;
	rUmfVorlaufSek		: REAL;
	rUmfRuecklaufSek	: REAL;
	bPumpenState		: BOOL;
	rRTMall_EG_Billa	: REAL;
	rRTMall_EG_RichutngBT2 : REAL;
	rRTMall_EG_VorPost 	: REAL;
	rRTMall_OG_Nordseitig : REAL;
	rRTMall_OG_Suedseitig : REAL;
	rRTMall_OG_VorTKMaxx : REAL;
	rRTMall_OG_VorStrasslSchaider : REAL;
	rNewTargetValue 	: REAL;
	rBT2UmfVorlaufSek	: REAL;
	rBT2UmfRuecklaufPri	: REAL;
	bBT2PumpenState		: BOOL;
	rBT2RTMall_EG_Nord	: REAL;
	rBT2RTMall_OG_Nord	: REAL;
	rBT2RTMall_EG_Sued	: REAL;
	rBT2RTMall_OG_Sued	: REAL;
	rBT2NewTargetValue	: REAL;
	rBT3UmfVorlaufSek	: REAL;
	rBT3UmfRuecklaufSek : REAL;
	bBT3PumpenState		: BOOL;
	rBT3RTMall_EG_West	: REAL;
	rBT3RTMall_OG_West	: REAL;
	rBT3RTMall_EG_HK31	: REAL;
	rBT3RTMall_EG_HK32	: REAL;
	rBT3RTMall_OG_K33	: REAL;
	rBT3RTMall_OG_K34	: REAL;
	rBT3RTMall_OG_Ost	: REAL;
	rBT3RTMall_EG_Ost	: REAL;
	rBT3RTMall_EG_HK35	: REAL;
	rBT3RTMall_OG_HK37	: REAL;
	rBT3NewTargetValue	: REAL;
	rBT4UmfVorlaufSek	: REAL;
	rBT4UmfRuecklaufSek	: REAL;
	bBT4PumpenState		: BOOL;
	rBT4RTMall_EG		: REAL;
	rBT5RTMall_OG		: REAL;
	rBT6RTMall_OG		: REAL;
	rBT6RTMall_EG		: REAL;
	rBT4NewTargetValue	: REAL;
	rAussentemperatur	: REAL;
	bEnableOp			: BOOL;
	bsEnableOp			: BOOL;
	bEnableOpBT2		: BOOL;
	bsEnableOpBT2		: BOOL;
	bEnableOpBT3		: BOOL;
	bsEnableOpBT3		: BOOL;
	bEnableOpBT4		: BOOL;
	bsEnableOpBT4		: BOOL;
	rBT1EM_Power_kW		: REAL;
	lrBT1EM_Counter_kWh	: REAL;
	rBT2EM_Power_kW		: REAL;
	lrBT2EM_Counter_kWh	: REAL;
	rBT3EM_Power_kW		: REAL;
	lrBT3EM_Counter_kWh	: REAL;
	rBT4EM_Power_kW		: REAL;
	lrBT4EM_Counter_kWh	: REAL;
	lrPowerPV_1_1		: LREAL;				
	lrPowerPV_1_2		: LREAL;				
	lrPowerPV_2_1		: LREAL;				
	lrPowerPV_2_2		: LREAL;				
	lrPowerPV_3_1		: LREAL;				
	lrPowerPV_3_2		: LREAL;				
	lrPowerPV_3_3		: LREAL;				
	lrPowerPV_3_4		: LREAL;				
	lrPowerPV_3_5		: LREAL;				
	lrPowerPV_3_6		: LREAL;				
	lrPowerPV			: LREAL;
	rUmfVorlaufPri		: REAL;
	rUmfRuecklaufPri	: REAL;
	rBT3UmfRuecklaufPri	: REAL;
	rBT3UmfVorlaufPri	: REAL;
	rBT4UmfRuecklaufPri	: REAL;
	rBT4UmfVorlaufPri	: REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>