<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="prgPV" Id="{d4fd47a8-e1a0-4047-bcd2-d28652bb3553}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM prgPV
VAR
	lrPowerPV				: LREAL;				//{#lynus.ag#()}
	lrPowerPV_1_1				: LREAL;				//{#lynus.ag#()}
	lrPowerPV_1_2				: LREAL;				//{#lynus.ag#()}
	lrPowerPV_2_1				: LREAL;				//{#lynus.ag#()}
	lrPowerPV_2_2				: LREAL;				//{#lynus.ag#()}
	lrPowerPV_3_1				: LREAL;				//{#lynus.ag#()}
	lrPowerPV_3_2				: LREAL;				//{#lynus.ag#()}
	lrPowerPV_3_3				: LREAL;				//{#lynus.ag#()}
	lrPowerPV_3_4				: LREAL;				//{#lynus.ag#()}
	lrPowerPV_3_5				: LREAL;				//{#lynus.ag#()}
	lrPowerPV_3_6				: LREAL;				//{#lynus.ag#()}
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[prgPV.lrPowerPV_1_1  := 			prg_ADS.struct_received.lrPowerPV_1_1	;
prgPV.lrPowerPV_1_2  := 			prg_ADS.struct_received.lrPowerPV_1_2	;
prgPV.lrPowerPV_2_1  := 			prg_ADS.struct_received.lrPowerPV_2_1	;
prgPV.lrPowerPV_2_2  := 			prg_ADS.struct_received.lrPowerPV_2_2	;
prgPV.lrPowerPV_3_1  := 			prg_ADS.struct_received.lrPowerPV_3_1	;
prgPV.lrPowerPV_3_2  := 			prg_ADS.struct_received.lrPowerPV_3_2	;
prgPV.lrPowerPV_3_3  := 			prg_ADS.struct_received.lrPowerPV_3_3	;
prgPV.lrPowerPV_3_4  := 			prg_ADS.struct_received.lrPowerPV_3_4	;
prgPV.lrPowerPV_3_5  := 			prg_ADS.struct_received.lrPowerPV_3_5	;
prgPV.lrPowerPV_3_6  := 			prg_ADS.struct_received.lrPowerPV_3_6	;
prgPV.lrPowerPV  	 := 			prg_ADS.struct_received.lrPowerPV	;
]]></ST>
    </Implementation>
    <LineIds Name="prgPV">
      <LineId Id="6" Count="10" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>